--- a/src/app/admin/add-car/add-car.component.html
+++ b/src/app/admin/add-car/add-car.component.html
@@ -11,7 +11,7 @@
                     class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="registration">car registration</label>
+                    <label for="registration">Car Registration</label>
                     <input 
                     id="registration"
                     type="text"
@@ -125,7 +125,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label for="age">Price of Rent for a week</label>
+                            <label for="age">Price of rent for a week</label>
                             <input 
                             id="price"
                             type="number"
